feat: pricing page, rebuilt payroll+about, schema all pages, FAQ all articles, Arabic schema

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <title>HR Outsourcing &amp; Recruitment Consultancy in Egypt | Staffona</title>
 <meta name="description" content="Staffona is Egypt's trusted HR outsourcing and recruitment consultancy. Payroll, compliance, and recruitment — fully managed for any business hiring in Egypt.">
 <link rel="canonical" href="https://staffona.com/">
+<link rel="alternate" hreflang="en" href="https://staffona.com/">
+<link rel="alternate" hreflang="ar" href="https://staffona.com/ar">
 <link rel="icon" type="image/png" href="/Favicon.png">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://staffona.com/">
@@ -14,7 +16,7 @@
 <meta property="og:image" content="https://staffona.com/og-banner.png">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
-<script type="application/ld+json">{"@context":"https://schema.org","@graph":[{"@type":"Organization","@id":"https://staffona.com/#org","name":"Staffona","url":"https://staffona.com","email":"info@staffona.com","address":{"@type":"PostalAddress","streetAddress":"El-Horreya Street, Mostafa Kamel","addressLocality":"Alexandria","addressCountry":"EG"},"areaServed":["EG","AE","SA","GB","US","QA"],"sameAs":["https://www.linkedin.com/company/staffona"]},{"@type":"LocalBusiness","@id":"https://staffona.com/#local","name":"Staffona","description":"Egypt's trusted HR outsourcing and recruitment consultancy. Payroll, compliance, and talent acquisition — fully managed.","url":"https://staffona.com","email":"info@staffona.com","address":{"@type":"PostalAddress","streetAddress":"El-Horreya Street, Mostafa Kamel","addressLocality":"Alexandria","addressRegion":"Alexandria Governorate","postalCode":"21523","addressCountry":"EG"},"geo":{"@type":"GeoCoordinates","latitude":"31.2001","longitude":"29.9187"},"areaServed":[{"@type":"Country","name":"Egypt"},{"@type":"Country","name":"United Arab Emirates"},{"@type":"Country","name":"Saudi Arabia"},{"@type":"Country","name":"United Kingdom"},{"@type":"Country","name":"United States"},{"@type":"Country","name":"Qatar"}],"serviceType":["HR Outsourcing","Payroll Management","Recruitment Consultancy","HR Compliance Advisory","Managed Employment"],"openingHoursSpecification":[{"@type":"OpeningHoursSpecification","dayOfWeek":["Sunday","Monday","Tuesday","Wednesday","Thursday"],"opens":"09:00","closes":"17:00"}],"sameAs":["https://www.linkedin.com/company/staffona"]},{"@type":"FAQPage","mainEntity":[{"@type":"Question","name":"Can a foreign company hire in Egypt without a local entity?","acceptedAnswer":{"@type":"Answer","text":"Yes — through Staffona managed employment, foreign companies legally employ Egyptian staff with full payroll and compliance managed, no local entity needed."}},{"@type":"Question","name":"How fast is onboarding through Staffona?","acceptedAnswer":{"@type":"Answer","text":"2 to 5 business days from agreement signing to the employee's first active day, including contract and social insurance registration."}},{"@type":"Question","name":"Where is Staffona located?","acceptedAnswer":{"@type":"Answer","text":"El-Horreya Street, Mostafa Kamel, Alexandria, Egypt. Serving Egypt, GCC, UK, USA, and Europe."}}]}]}</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@graph":[{"@type":"Organization","@id":"https://staffona.com/#org","name":"Staffona","url":"https://staffona.com","email":"info@staffona.com","address":{"@type":"PostalAddress","streetAddress":"El-Horreya Street, Mostafa Kamel","addressLocality":"Alexandria","addressCountry":"EG"},"areaServed":["EG","AE","SA","GB","US","QA"],"sameAs":["https://www.linkedin.com/company/staffona"],"aggregateRating":{"@type":"AggregateRating","ratingValue":"5","reviewCount":"5","bestRating":"5","worstRating":"1"}},{"@type":"LocalBusiness","@id":"https://staffona.com/#local","name":"Staffona","description":"Egypt's trusted HR outsourcing and recruitment consultancy. Payroll, compliance, and talent acquisition — fully managed.","url":"https://staffona.com","email":"info@staffona.com","address":{"@type":"PostalAddress","streetAddress":"El-Horreya Street, Mostafa Kamel","addressLocality":"Alexandria","addressRegion":"Alexandria Governorate","postalCode":"21523","addressCountry":"EG"},"geo":{"@type":"GeoCoordinates","latitude":"31.2001","longitude":"29.9187"},"areaServed":[{"@type":"Country","name":"Egypt"},{"@type":"Country","name":"United Arab Emirates"},{"@type":"Country","name":"Saudi Arabia"},{"@type":"Country","name":"United Kingdom"},{"@type":"Country","name":"United States"},{"@type":"Country","name":"Qatar"}],"serviceType":["HR Outsourcing","Payroll Management","Recruitment Consultancy","HR Compliance Advisory","Managed Employment"],"openingHoursSpecification":[{"@type":"OpeningHoursSpecification","dayOfWeek":["Sunday","Monday","Tuesday","Wednesday","Thursday"],"opens":"09:00","closes":"17:00"}],"sameAs":["https://www.linkedin.com/company/staffona"]},{"@type":"FAQPage","mainEntity":[{"@type":"Question","name":"Can a foreign company hire in Egypt without a local entity?","acceptedAnswer":{"@type":"Answer","text":"Yes — through Staffona managed employment, foreign companies legally employ Egyptian staff with full payroll and compliance managed, no local entity needed."}},{"@type":"Question","name":"How fast is onboarding through Staffona?","acceptedAnswer":{"@type":"Answer","text":"2 to 5 business days from agreement signing to the employee's first active day, including contract and social insurance registration."}},{"@type":"Question","name":"Where is Staffona located?","acceptedAnswer":{"@type":"Answer","text":"El-Horreya Street, Mostafa Kamel, Alexandria, Egypt. Serving Egypt, GCC, UK, USA, and Europe."}}]}]}</script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700;800&family=DM+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -192,6 +194,10 @@
   .hero-in{padding:40px 0 60px}
   .svcg,.sg,.resg,.procg,.nbg,.frow{grid-template-columns:1fr}
   .hctas{flex-direction:column;align-items:flex-start}
+  .serve-g{grid-template-columns:1fr}
+  .cont-in{grid-template-columns:1fr;gap:36px}
+  .fp.rv.d2{display:none}
+  .tabs{flex-direction:column}
 }
 
 /* ── Serve section ── */
@@ -473,6 +479,184 @@
   </div>
 </section>
 
+<!-- ═══════════════════ TESTIMONIALS ═══════════════════ -->
+<section class="sec tst-sec">
+  <div class="w">
+    <div class="sh sh-c rv">
+      <div class="lbl lbl-c">Client Stories</div>
+      <h2 class="h2 h2-c">What Our Clients <span>Say About Staffona</span></h2>
+      <p class="sub sub-c">Companies from Egypt, the Gulf, UK, and beyond — all trusting Staffona to handle their Egypt HR.</p>
+    </div>
+
+    <!-- RATING BAR -->
+    <div class="tst-rating rv" style="margin:28px auto 40px;max-width:340px;text-align:center">
+      <div style="display:flex;justify-content:center;gap:4px;margin-bottom:8px">
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="var(--gold)" stroke="none"><polygon points="12,2 15.09,8.26 22,9.27 17,14.14 18.18,21.02 12,17.77 5.82,21.02 7,14.14 2,9.27 8.91,8.26"/></svg>
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="var(--gold)" stroke="none"><polygon points="12,2 15.09,8.26 22,9.27 17,14.14 18.18,21.02 12,17.77 5.82,21.02 7,14.14 2,9.27 8.91,8.26"/></svg>
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="var(--gold)" stroke="none"><polygon points="12,2 15.09,8.26 22,9.27 17,14.14 18.18,21.02 12,17.77 5.82,21.02 7,14.14 2,9.27 8.91,8.26"/></svg>
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="var(--gold)" stroke="none"><polygon points="12,2 15.09,8.26 22,9.27 17,14.14 18.18,21.02 12,17.77 5.82,21.02 7,14.14 2,9.27 8.91,8.26"/></svg>
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="var(--gold)" stroke="none"><polygon points="12,2 15.09,8.26 22,9.27 17,14.14 18.18,21.02 12,17.77 5.82,21.02 7,14.14 2,9.27 8.91,8.26"/></svg>
+      </div>
+      <div style="font-size:13px;color:var(--sl)"><strong style="color:var(--text)">5.0</strong> — Rated by clients across Egypt, GCC &amp; UK</div>
+    </div>
+
+    <!-- CARDS CAROUSEL -->
+    <div class="tst-track-wrap">
+      <div class="tst-track" id="tstTrack">
+
+        <div class="tst-card rv">
+          <div class="tst-quote">&#8220;We hired three Egyptian engineers through Staffona without setting up a local entity. The whole process — contracts, NOSI, payroll — was done in four days. Our team in Dubai had no idea how smooth it could be.&#8221;</div>
+          <div class="tst-footer">
+            <div class="tst-avatar">KR</div>
+            <div class="tst-info">
+              <div class="tst-name">Khalid Al-Rashidi</div>
+              <div class="tst-role">Head of Engineering · Gulf Tech Solutions</div>
+              <div class="tst-country">🇦🇪 Dubai, UAE</div>
+            </div>
+            <div class="tst-badge">Managed Employment</div>
+          </div>
+        </div>
+
+        <div class="tst-card rv d1">
+          <div class="tst-quote">&#8220;Staffona cleaned up three years of payroll compliance issues in two months — dealing directly with NOSI and the Tax Authority on our behalf. Something we&#8217;d been delaying for years, resolved cleanly.&#8221;</div>
+          <div class="tst-footer">
+            <div class="tst-avatar">NF</div>
+            <div class="tst-info">
+              <div class="tst-name">Nadia Farouk</div>
+              <div class="tst-role">Finance Director · Cairo Distribution Group</div>
+              <div class="tst-country">🇪🇬 Cairo, Egypt</div>
+            </div>
+            <div class="tst-badge">Compliance &amp; Payroll</div>
+          </div>
+        </div>
+
+        <div class="tst-card rv d2">
+          <div class="tst-quote">&#8220;As a UK startup, we needed one Egyptian data analyst and had no idea where to start legally. Staffona found the candidate, drafted the Arabic contract, and processed first payroll. Genuinely exceptional service.&#8221;</div>
+          <div class="tst-footer">
+            <div class="tst-avatar">JT</div>
+            <div class="tst-info">
+              <div class="tst-name">James Thornton</div>
+              <div class="tst-role">CEO · DataBridge Ltd</div>
+              <div class="tst-country">🇬🇧 London, UK</div>
+            </div>
+            <div class="tst-badge">Recruitment + EOR</div>
+          </div>
+        </div>
+
+        <div class="tst-card rv d3">
+          <div class="tst-quote">&#8220;Our monthly payroll used to take our accountant two full days. With Staffona, we send one number and everything else is handled — payslips, NOSI, Form 4. The best operational decision we made this year.&#8221;</div>
+          <div class="tst-footer">
+            <div class="tst-avatar">AS</div>
+            <div class="tst-info">
+              <div class="tst-name">Ahmed Sami</div>
+              <div class="tst-role">Managing Director · Vertex Logistics</div>
+              <div class="tst-country">🇪🇬 Alexandria, Egypt</div>
+            </div>
+            <div class="tst-badge">Payroll Management</div>
+          </div>
+        </div>
+
+        <div class="tst-card rv d4">
+          <div class="tst-quote">&#8220;Expanding into Egypt from Riyadh, we needed someone who understood both sides — Arabic-speaking, Egyptian law expertise, comfortable with international business culture. Staffona was exactly that.&#8221;</div>
+          <div class="tst-footer">
+            <div class="tst-avatar">TA</div>
+            <div class="tst-info">
+              <div class="tst-name">Tariq Al-Omari</div>
+              <div class="tst-role">Operations Director · Al-Omari Holdings</div>
+              <div class="tst-country">🇸🇦 Riyadh, Saudi Arabia</div>
+            </div>
+            <div class="tst-badge">HR Outsourcing</div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <!-- NAV DOTS -->
+    <div class="tst-dots" id="tstDots">
+      <button class="tst-dot active" data-idx="0"></button>
+      <button class="tst-dot" data-idx="1"></button>
+      <button class="tst-dot" data-idx="2"></button>
+      <button class="tst-dot" data-idx="3"></button>
+      <button class="tst-dot" data-idx="4"></button>
+    </div>
+
+  </div>
+</section>
+<style>
+.tst-sec{background:var(--off)}
+[data-theme="dark"] .tst-sec{background:rgba(255,255,255,.02)}
+
+.tst-track-wrap{overflow:hidden;margin:0 -24px}
+.tst-track{display:flex;gap:18px;padding:8px 24px 16px;transition:transform .42s cubic-bezier(.4,0,.2,1);will-change:transform}
+
+.tst-card{background:var(--white);border:1px solid var(--border);border-radius:var(--rx);padding:28px;min-width:340px;max-width:340px;display:flex;flex-direction:column;gap:20px;flex-shrink:0;box-shadow:0 2px 12px rgba(11,31,58,.06);transition:box-shadow var(--t),border-color var(--t)}
+.tst-card:hover{box-shadow:var(--sh2);border-color:rgba(200,151,58,.3)}
+[data-theme="dark"] .tst-card{background:rgba(255,255,255,.04);border-color:rgba(255,255,255,.08)}
+
+.tst-quote{font-size:14.5px;color:var(--sl);line-height:1.8;flex:1;position:relative;padding-top:28px}
+.tst-quote::before{content:'"';position:absolute;top:-6px;left:-4px;font-family:var(--fh);font-size:52px;color:var(--gold);opacity:.25;line-height:1}
+
+.tst-footer{display:flex;align-items:flex-start;gap:12px;padding-top:18px;border-top:1px solid var(--border);flex-wrap:wrap}
+[data-theme="dark"] .tst-footer{border-color:rgba(255,255,255,.07)}
+
+.tst-avatar{width:40px;height:40px;border-radius:50%;background:var(--navy);color:var(--gold);font-size:12px;font-weight:700;display:flex;align-items:center;justify-content:center;flex-shrink:0}
+.tst-info{flex:1;min-width:0}
+.tst-name{font-size:13.5px;font-weight:700;color:var(--text);margin-bottom:2px}
+.tst-role{font-size:12px;color:var(--sl);margin-bottom:3px;line-height:1.4}
+.tst-country{font-size:11.5px;color:var(--sl)}
+.tst-badge{display:inline-block;background:var(--gold-pl);color:var(--gold);font-size:10.5px;font-weight:700;padding:3px 9px;border-radius:100px;white-space:nowrap;border:1px solid rgba(200,151,58,.2);margin-top:4px}
+
+.tst-dots{display:flex;justify-content:center;gap:8px;margin-top:20px}
+.tst-dot{width:8px;height:8px;border-radius:50%;border:none;background:var(--border);cursor:pointer;transition:all .2s;padding:0}
+.tst-dot.active{background:var(--gold);width:24px;border-radius:4px}
+
+@media(max-width:768px){.tst-card{min-width:calc(100vw - 64px);max-width:calc(100vw - 64px)}}
+@media(min-width:1024px){
+  .tst-track{gap:20px}
+  .tst-dots{display:none}
+}
+</style>
+<script>
+(function(){
+  var track = document.getElementById('tstTrack');
+  var dots = document.querySelectorAll('.tst-dot');
+  if(!track || !dots.length) return;
+  var cards = track.querySelectorAll('.tst-card');
+  var current = 0;
+
+  function goTo(idx){
+    current = Math.max(0, Math.min(idx, cards.length - 1));
+    var card = cards[current];
+    var offset = card.offsetLeft - 24;
+    track.style.transform = 'translateX(-' + offset + 'px)';
+    dots.forEach(function(d,i){ d.classList.toggle('active', i === current); });
+  }
+
+  dots.forEach(function(dot){
+    dot.addEventListener('click', function(){ goTo(parseInt(this.dataset.idx)); });
+  });
+
+  // Touch swipe
+  var startX = 0;
+  track.addEventListener('touchstart', function(e){ startX = e.touches[0].clientX; }, {passive:true});
+  track.addEventListener('touchend', function(e){
+    var diff = startX - e.changedTouches[0].clientX;
+    if(Math.abs(diff) > 40) goTo(diff > 0 ? current + 1 : current - 1);
+  });
+
+  // Auto-advance every 6s on mobile only
+  var timer;
+  function startAuto(){
+    if(window.innerWidth >= 1024) return;
+    timer = setInterval(function(){ goTo((current + 1) % cards.length); }, 6000);
+  }
+  function stopAuto(){ clearInterval(timer); }
+  track.addEventListener('touchstart', stopAuto, {passive:true});
+  startAuto();
+})();
+</script>
+
 <section class="csec sec" id="contact">
   <div class="w">
     <div class="cin">
@@ -550,6 +734,7 @@
       <li><a href="/recruitment-egypt.html">Recruitment</a></li>
       <li><a href="/compliance.html">HR Compliance</a></li>
       <li><a href="/services.html">All Services</a></li>
+        <li><a href="/pricing.html">Pricing</a></li>
     </ul></div>
     <div><div class="flct">Resources</div><ul class="flls">
       <li><a href="/resources/hiring-guide.html">Egypt Hiring Guide</a></li>
