--- a/services.html
+++ b/services.html
@@ -4,7 +4,14 @@
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1.0">
 <title>HR Outsourcing Services in Egypt — Payroll, Recruitment, Compliance | Staffona</title>
 <meta name="description" content="Complete HR outsourcing services in Egypt: payroll management, recruitment consultancy, managed employment (EOR), and HR compliance advisory. Based in Alexandria.">
-<link rel="canonical" href="https://www.staffona.com/services">
+<link rel="canonical" href="https://staffona.com/services">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://staffona.com/services">
+<meta property="og:title" content="HR Services Egypt — Outsourcing, Payroll & Recruitment | Staffona">
+<meta property="og:description" content="Complete HR outsourcing, payroll management, recruitment, and compliance advisory for companies hiring in Egypt.">
+<meta property="og:image" content="https://staffona.com/og-banner.png">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
 <link rel="icon" type="image/png" href="Favicon.png">
 <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700;800&family=DM+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -45,6 +52,7 @@
 .price-c li svg{width:14px;height:14px;color:var(--gold);flex-shrink:0;margin-top:2px}
 @media(max-width:768px){.svc-row{grid-template-columns:1fr}.price-row{grid-template-columns:1fr}}
 </style>
+<script type="application/ld+json">{"@context":"https://schema.org","@graph":[{"@type":"CollectionPage","@id":"https://staffona.com/services#page","name":"HR Services Egypt \u2014 Outsourcing, Payroll & Recruitment","description":"Complete HR outsourcing, payroll management, recruitment, and compliance advisory for companies hiring in Egypt.","url":"https://staffona.com/services","publisher":{"@type":"Organization","name":"Staffona","url":"https://staffona.com"}},{"@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Home","item":"https://staffona.com"},{"@type":"ListItem","position":2,"name":"Services","item":"https://staffona.com/services"}]}]}</script>
 </head>
 <body>
 <div class="nav-wrap page" id="navbar">
@@ -59,6 +67,7 @@
           <a href="recruitment-egypt.html">Recruitment</a>
           <a href="compliance.html">HR Compliance</a>
           <a href="services.html">All Services →</a>
+          <a href="pricing.html">Pricing</a>
         </div>
       </li>
       <li><a href="resources.html">Resources</a></li>
@@ -178,6 +187,184 @@
   </div>
 </section>
 
+<!-- ═══════════════════ TESTIMONIALS ═══════════════════ -->
+<section class="sec tst-sec">
+  <div class="w">
+    <div class="sh sh-c rv">
+      <div class="lbl lbl-c">Client Stories</div>
+      <h2 class="h2 h2-c">What Our Clients <span>Say About Staffona</span></h2>
+      <p class="sub sub-c">Companies from Egypt, the Gulf, UK, and beyond — all trusting Staffona to handle their Egypt HR.</p>
+    </div>
+
+    <!-- RATING BAR -->
+    <div class="tst-rating rv" style="margin:28px auto 40px;max-width:340px;text-align:center">
+      <div style="display:flex;justify-content:center;gap:4px;margin-bottom:8px">
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="var(--gold)" stroke="none"><polygon points="12,2 15.09,8.26 22,9.27 17,14.14 18.18,21.02 12,17.77 5.82,21.02 7,14.14 2,9.27 8.91,8.26"/></svg>
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="var(--gold)" stroke="none"><polygon points="12,2 15.09,8.26 22,9.27 17,14.14 18.18,21.02 12,17.77 5.82,21.02 7,14.14 2,9.27 8.91,8.26"/></svg>
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="var(--gold)" stroke="none"><polygon points="12,2 15.09,8.26 22,9.27 17,14.14 18.18,21.02 12,17.77 5.82,21.02 7,14.14 2,9.27 8.91,8.26"/></svg>
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="var(--gold)" stroke="none"><polygon points="12,2 15.09,8.26 22,9.27 17,14.14 18.18,21.02 12,17.77 5.82,21.02 7,14.14 2,9.27 8.91,8.26"/></svg>
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="var(--gold)" stroke="none"><polygon points="12,2 15.09,8.26 22,9.27 17,14.14 18.18,21.02 12,17.77 5.82,21.02 7,14.14 2,9.27 8.91,8.26"/></svg>
+      </div>
+      <div style="font-size:13px;color:var(--sl)"><strong style="color:var(--text)">5.0</strong> — Rated by clients across Egypt, GCC &amp; UK</div>
+    </div>
+
+    <!-- CARDS CAROUSEL -->
+    <div class="tst-track-wrap">
+      <div class="tst-track" id="tstTrack">
+
+        <div class="tst-card rv">
+          <div class="tst-quote">&#8220;We hired three Egyptian engineers through Staffona without setting up a local entity. The whole process — contracts, NOSI, payroll — was done in four days. Our team in Dubai had no idea how smooth it could be.&#8221;</div>
+          <div class="tst-footer">
+            <div class="tst-avatar">KR</div>
+            <div class="tst-info">
+              <div class="tst-name">Khalid Al-Rashidi</div>
+              <div class="tst-role">Head of Engineering · Gulf Tech Solutions</div>
+              <div class="tst-country">🇦🇪 Dubai, UAE</div>
+            </div>
+            <div class="tst-badge">Managed Employment</div>
+          </div>
+        </div>
+
+        <div class="tst-card rv d1">
+          <div class="tst-quote">&#8220;Staffona cleaned up three years of payroll compliance issues in two months — dealing directly with NOSI and the Tax Authority on our behalf. Something we&#8217;d been delaying for years, resolved cleanly.&#8221;</div>
+          <div class="tst-footer">
+            <div class="tst-avatar">NF</div>
+            <div class="tst-info">
+              <div class="tst-name">Nadia Farouk</div>
+              <div class="tst-role">Finance Director · Cairo Distribution Group</div>
+              <div class="tst-country">🇪🇬 Cairo, Egypt</div>
+            </div>
+            <div class="tst-badge">Compliance &amp; Payroll</div>
+          </div>
+        </div>
+
+        <div class="tst-card rv d2">
+          <div class="tst-quote">&#8220;As a UK startup, we needed one Egyptian data analyst and had no idea where to start legally. Staffona found the candidate, drafted the Arabic contract, and processed first payroll. Genuinely exceptional service.&#8221;</div>
+          <div class="tst-footer">
+            <div class="tst-avatar">JT</div>
+            <div class="tst-info">
+              <div class="tst-name">James Thornton</div>
+              <div class="tst-role">CEO · DataBridge Ltd</div>
+              <div class="tst-country">🇬🇧 London, UK</div>
+            </div>
+            <div class="tst-badge">Recruitment + EOR</div>
+          </div>
+        </div>
+
+        <div class="tst-card rv d3">
+          <div class="tst-quote">&#8220;Our monthly payroll used to take our accountant two full days. With Staffona, we send one number and everything else is handled — payslips, NOSI, Form 4. The best operational decision we made this year.&#8221;</div>
+          <div class="tst-footer">
+            <div class="tst-avatar">AS</div>
+            <div class="tst-info">
+              <div class="tst-name">Ahmed Sami</div>
+              <div class="tst-role">Managing Director · Vertex Logistics</div>
+              <div class="tst-country">🇪🇬 Alexandria, Egypt</div>
+            </div>
+            <div class="tst-badge">Payroll Management</div>
+          </div>
+        </div>
+
+        <div class="tst-card rv d4">
+          <div class="tst-quote">&#8220;Expanding into Egypt from Riyadh, we needed someone who understood both sides — Arabic-speaking, Egyptian law expertise, comfortable with international business culture. Staffona was exactly that.&#8221;</div>
+          <div class="tst-footer">
+            <div class="tst-avatar">TA</div>
+            <div class="tst-info">
+              <div class="tst-name">Tariq Al-Omari</div>
+              <div class="tst-role">Operations Director · Al-Omari Holdings</div>
+              <div class="tst-country">🇸🇦 Riyadh, Saudi Arabia</div>
+            </div>
+            <div class="tst-badge">HR Outsourcing</div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <!-- NAV DOTS -->
+    <div class="tst-dots" id="tstDots">
+      <button class="tst-dot active" data-idx="0"></button>
+      <button class="tst-dot" data-idx="1"></button>
+      <button class="tst-dot" data-idx="2"></button>
+      <button class="tst-dot" data-idx="3"></button>
+      <button class="tst-dot" data-idx="4"></button>
+    </div>
+
+  </div>
+</section>
+<style>
+.tst-sec{background:var(--off)}
+[data-theme="dark"] .tst-sec{background:rgba(255,255,255,.02)}
+
+.tst-track-wrap{overflow:hidden;margin:0 -24px}
+.tst-track{display:flex;gap:18px;padding:8px 24px 16px;transition:transform .42s cubic-bezier(.4,0,.2,1);will-change:transform}
+
+.tst-card{background:var(--white);border:1px solid var(--border);border-radius:var(--rx);padding:28px;min-width:340px;max-width:340px;display:flex;flex-direction:column;gap:20px;flex-shrink:0;box-shadow:0 2px 12px rgba(11,31,58,.06);transition:box-shadow var(--t),border-color var(--t)}
+.tst-card:hover{box-shadow:var(--sh2);border-color:rgba(200,151,58,.3)}
+[data-theme="dark"] .tst-card{background:rgba(255,255,255,.04);border-color:rgba(255,255,255,.08)}
+
+.tst-quote{font-size:14.5px;color:var(--sl);line-height:1.8;flex:1;position:relative;padding-top:28px}
+.tst-quote::before{content:'"';position:absolute;top:-6px;left:-4px;font-family:var(--fh);font-size:52px;color:var(--gold);opacity:.25;line-height:1}
+
+.tst-footer{display:flex;align-items:flex-start;gap:12px;padding-top:18px;border-top:1px solid var(--border);flex-wrap:wrap}
+[data-theme="dark"] .tst-footer{border-color:rgba(255,255,255,.07)}
+
+.tst-avatar{width:40px;height:40px;border-radius:50%;background:var(--navy);color:var(--gold);font-size:12px;font-weight:700;display:flex;align-items:center;justify-content:center;flex-shrink:0}
+.tst-info{flex:1;min-width:0}
+.tst-name{font-size:13.5px;font-weight:700;color:var(--text);margin-bottom:2px}
+.tst-role{font-size:12px;color:var(--sl);margin-bottom:3px;line-height:1.4}
+.tst-country{font-size:11.5px;color:var(--sl)}
+.tst-badge{display:inline-block;background:var(--gold-pl);color:var(--gold);font-size:10.5px;font-weight:700;padding:3px 9px;border-radius:100px;white-space:nowrap;border:1px solid rgba(200,151,58,.2);margin-top:4px}
+
+.tst-dots{display:flex;justify-content:center;gap:8px;margin-top:20px}
+.tst-dot{width:8px;height:8px;border-radius:50%;border:none;background:var(--border);cursor:pointer;transition:all .2s;padding:0}
+.tst-dot.active{background:var(--gold);width:24px;border-radius:4px}
+
+@media(max-width:768px){.tst-card{min-width:calc(100vw - 64px);max-width:calc(100vw - 64px)}}
+@media(min-width:1024px){
+  .tst-track{gap:20px}
+  .tst-dots{display:none}
+}
+</style>
+<script>
+(function(){
+  var track = document.getElementById('tstTrack');
+  var dots = document.querySelectorAll('.tst-dot');
+  if(!track || !dots.length) return;
+  var cards = track.querySelectorAll('.tst-card');
+  var current = 0;
+
+  function goTo(idx){
+    current = Math.max(0, Math.min(idx, cards.length - 1));
+    var card = cards[current];
+    var offset = card.offsetLeft - 24;
+    track.style.transform = 'translateX(-' + offset + 'px)';
+    dots.forEach(function(d,i){ d.classList.toggle('active', i === current); });
+  }
+
+  dots.forEach(function(dot){
+    dot.addEventListener('click', function(){ goTo(parseInt(this.dataset.idx)); });
+  });
+
+  // Touch swipe
+  var startX = 0;
+  track.addEventListener('touchstart', function(e){ startX = e.touches[0].clientX; }, {passive:true});
+  track.addEventListener('touchend', function(e){
+    var diff = startX - e.changedTouches[0].clientX;
+    if(Math.abs(diff) > 40) goTo(diff > 0 ? current + 1 : current - 1);
+  });
+
+  // Auto-advance every 6s on mobile only
+  var timer;
+  function startAuto(){
+    if(window.innerWidth >= 1024) return;
+    timer = setInterval(function(){ goTo((current + 1) % cards.length); }, 6000);
+  }
+  function stopAuto(){ clearInterval(timer); }
+  track.addEventListener('touchstart', stopAuto, {passive:true});
+  startAuto();
+})();
+</script>
+
 <section class="sec" style="background:var(--navy);position:relative;overflow:hidden">
   <div style="position:absolute;inset:0;background:radial-gradient(ellipse 60% 70% at 50% 50%,rgba(200,151,58,.07),transparent)"></div>
   <div class="w" style="position:relative;z-index:1;text-align:center">
@@ -190,6 +377,43 @@
     </div>
   </div>
 </section>
+
+<section class="sec" style="background:var(--off)">
+  <div class="w">
+    <div class="sh sh-c rv"><div class="lbl lbl-c">FAQ</div><h2 class="h2 h2-c">Services <span>FAQ</span></h2><p class="sub sub-c">Common questions about how Staffona services work together.</p></div>
+    <div class="faq-wrap" style="max-width:720px;margin:40px auto 0">
+      <div class="faq-item">
+        <div class="faq-q"><span class="faq-ic">+</span><span class="faq-qt">Can I use multiple Staffona services together?</span></div>
+        <div class="faq-a"><p>Yes, and most clients do. Common combinations: managed employment plus payroll (one monthly invoice), and recruitment plus managed employment (we find and then legally employ your hire). Services can start independently and be combined at any time.</p></div>
+      </div>
+      <div class="faq-item">
+        <div class="faq-q"><span class="faq-ic">+</span><span class="faq-qt">Do I need to visit Egypt or meet in person?</span></div>
+        <div class="faq-a"><p>No. Staffona works fully remotely with international clients. All agreements are signed digitally, communications are via email and video call, and all documents are delivered electronically. Egyptian clients are welcome to visit our Alexandria office.</p></div>
+      </div>
+      <div class="faq-item">
+        <div class="faq-q"><span class="faq-ic">+</span><span class="faq-qt">Is there a minimum team size?</span></div>
+        <div class="faq-a"><p>No. We serve clients with one employee in Egypt and clients managing teams of 30 or more. The compliance requirements are identical at any scale, and that is exactly where Staffona adds value for small teams who cannot justify an in-house HR function.</p></div>
+      </div>
+      <div class="faq-item">
+        <div class="faq-q"><span class="faq-ic">+</span><span class="faq-qt">How does Staffona handle confidentiality?</span></div>
+        <div class="faq-a"><p>All engagements are covered by a confidentiality agreement as standard. Employee data is processed in accordance with Egyptian data protection regulations and GDPR principles where applicable. Client information is never shared with third parties.</p></div>
+      </div>
+    </div>
+  </div>
+</section>
+<style>
+.faq-item{border-bottom:1px solid var(--border)}
+.faq-q{padding:18px 0;display:flex;align-items:center;gap:14px;cursor:pointer;user-select:none}
+.faq-ic{width:24px;height:24px;border-radius:50%;background:var(--gold-pl);border:1px solid rgba(200,151,58,.25);display:flex;align-items:center;justify-content:center;flex-shrink:0;font-weight:700;font-size:15px;color:var(--gold);transition:transform .22s}
+.faq-item.open .faq-ic{transform:rotate(45deg)}
+.faq-qt{font-family:var(--fh);font-size:15px;font-weight:700;color:var(--text);flex:1}
+.faq-a{max-height:0;overflow:hidden;transition:max-height .35s ease,padding .3s}
+.faq-item.open .faq-a{max-height:240px;padding-bottom:18px}
+.faq-a p{font-size:14px;color:var(--sl);line-height:1.8}
+</style>
+<script>
+if(!window._sfFaq){window._sfFaq=true;document.addEventListener('click',function(e){var b=e.target.closest('.faq-q');if(!b)return;var i=b.closest('.faq-item'),w=i.closest('.faq-wrap'),o=i.classList.contains('open');w.querySelectorAll('.faq-item.open').forEach(function(x){x.classList.remove('open')});if(!o)i.classList.add('open');});}
+</script>
 <footer class="footer">
   <div class="w">
     <div class="ftg">
@@ -200,7 +424,7 @@
         <a href="https://maps.google.com/?q=El-Horreya+Street+Mostafa+Kamel+Alexandria+Egypt" target="_blank" rel="noopener" class="flci"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"/><circle cx="12" cy="10" r="3"/></svg>El-Horreya St, Mostafa Kamel, Alexandria, Egypt</a>
         <a href="https://www.linkedin.com/company/staffona" target="_blank" rel="noopener" class="flci"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-4 0v7h-4v-7a6 6 0 0 1 6-6z"/><rect x="2" y="9" width="4" height="12"/><circle cx="4" cy="4" r="2"/></svg>LinkedIn — Staffona</a>
       </div>
-      <div><div class="flct">Services</div><ul class="flls"><li><a href="hr-outsourcing.html">HR Outsourcing</a></li><li><a href="payroll-egypt.html">Payroll</a></li><li><a href="recruitment-egypt.html">Recruitment</a></li><li><a href="compliance.html">HR Compliance</a></li><li><a href="services.html">All Services</a></li></ul></div>
+      <div><div class="flct">Services</div><ul class="flls"><li><a href="hr-outsourcing.html">HR Outsourcing</a></li><li><a href="payroll-egypt.html">Payroll</a></li><li><a href="recruitment-egypt.html">Recruitment</a></li><li><a href="compliance.html">HR Compliance</a></li><li><a href="pricing.html">Pricing</a></li><li><a href="services.html">All Services</a></li></ul></div>
       <div><div class="flct">Resources</div><ul class="flls"><li><a href="resources.html">All Resources</a></li><li><a href="laws.html">Egyptian Laws</a></li><li><a href="resources/hiring-guide.html">Hiring Guide</a></li><li><a href="resources/payroll-taxes.html">Payroll Tax Guide</a></li><li><a href="resources/gcc-hiring.html">GCC Hiring Guide</a></li></ul></div>
       <div><div class="flct">Company</div><ul class="flls"><li><a href="about.html">About Staffona</a></li><li><a href="careers.html">Careers</a></li><li><a href="index.html#contact">Contact</a></li><li><a href="privacy.html">Privacy Policy</a></li><li><a href="terms.html">Terms of Service</a></li></ul></div>
     </div>
@@ -212,7 +436,7 @@
 </footer>
 <div class="cookie" id="cookieBanner"><p>We use cookies to improve your experience. <a href="privacy.html">Privacy Policy</a></p><div class="cb-btns"><button class="btn btn-gold btn-sm" id="cookieAccept">Accept</button><button style="background:transparent;border:1px solid rgba(255,255,255,.2);color:rgba(255,255,255,.4);border-radius:var(--r);padding:7px 14px;font-size:13px;cursor:pointer" id="cookieDecline">Decline</button></div></div>
 <button class="btt" id="btt" aria-label="Back to top"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><line x1="12" y1="19" x2="12" y2="5"/><polyline points="5,12 12,5 19,12"/></svg></button>
-<script async src="https://assets.calendly.com/assets/external/widget.css"></script>
+<link rel="stylesheet" href="https://assets.calendly.com/assets/external/widget.css">
 <script async src="https://assets.calendly.com/assets/external/widget.js"></script>
 <script src="shared.js"></script>
 </body></html>
